# Intel-II

./: .gitignore  10 - Clustering.ipynb  8 - Decision_Trees.ipynb  README.md  parcial2_jddc.ipynb
.cursor/: apl-guide.md  parlang-guide.md
.jorge/partials/first/: exam-1.ipynb  exam-3.ipynb  exam.py  pyproject.toml
.jorge/partials/second/: DEPLOYMENT.md  README.md  app.py  pyproject.toml
.jorge/partials/second/.md/: CONFIG_USAGE.md  QUICK_REFERENCE.md  SETUP_SUMMARY.md
.jorge/partials/second/.plans/: 1.exec.md  2.exec.md
.jorge/partials/second/data/: bank-names.txt
.jorge/partials/second/funcs/: evaluator.py  persistence.py  visualizers.py
.jorge/partials/second/funcs/visual/: basic_visuals.py  pca_visuals.py
.jorge/partials/second/settings/: config.py  feats.py  imports.py  options.py
.jorge/partials/second/ui/components/: __init__.py  metrics.py  panels.py  sidebar.py  sliders.py
.jorge/partials/second/ui/pages/: conf.py
.jorge/partials/second/ui/utils/: __init__.py  data_loader.py  state_manager.py
.jorge/project/: .gitignore  README.md  architecture_design.md  merge.py  parcial-i.ipynb  project_overview.md  pyproject.toml
.jorge/project/.claude/: CLAUDE.md
.jorge/project/.examples/: malware-classification-fixed.ipynb
.jorge/project/.explore/: class.ipynb  roc-randomforest.ipynb
.jorge/project/.history/: README.md  dataset_guide.md  definition.md  evaluation_metrics.md
.jorge/project/.md/: activation.md  api-ref.md  arch.md
.jorge/project/.md/layout/: 00_overview.md  page_1_home.md  page_2_dataset.md  page_3_model.md  page_4_training.md  page_5_monitor.md  page_6_results.md  page_7_interpretability.md  sidebar.md
.jorge/project/app/: README.md  config.py  constants.py  main.py
.jorge/project/app/.streamlit/: config.toml
.jorge/project/app/components/: experiment_row.py  header.py  model_card.py  sidebar.py  styling.py  theme.py  tooltips.py  utils.py
.jorge/project/app/content/dataset/: page.py  tooltips.py  view.py
.jorge/project/app/content/home/: page.py  view.py
.jorge/project/app/content/interpret/: page.py  tooltips.py  view.py
.jorge/project/app/content/model/: classifier_head.py  custom_cnn.py  layer_builder.py  layer_configs.py  layer_renderer.py  page.py  summary.py  tooltips.py  transfer_learning.py  transformer.py  view.py
.jorge/project/app/content/monitor/: page.py  view.py
.jorge/project/app/content/results/: advanced_charts.py  charts.py  page.py  tooltips.py  view.py
.jorge/project/app/content/training/: page.py  tooltips.py  view.py
.jorge/project/app/models/: base.py
.jorge/project/app/models/manual/: cnn.py
.jorge/project/app/models/pytorch/: cnn_builder.py  transfer.py  transformer.py
.jorge/project/app/state/: cache.py  persistence.py  session_state.py  ui.py  workflow.py
.jorge/project/app/training/: dataset.py  engine.py  evaluator.py  optimizers.py  transforms.py  worker.py
.jorge/project/app/utils/: checkpoint_manager.py  dataset_sections.py  dataset_utils.py  dataset_viz.py
.jorge/project/report/: MainThesis.cls  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc
.jorge/project/report/Bibliography/: Bibliography.bib
.jorge/project/report/Chapters/: 00-Abstract.aux  00-Abstract.tex  01-Content.aux  01-Introduction.aux  01-Introduction.tex  02-Related-Work.aux  02-Related-Work.tex  02-User-Guide.aux  03-Latex-Tutorial.aux  03-Methodology.aux  03-Methodology.tex  04-Experiments-Results.aux  04-Experiments-Results.tex  05-Conclusion.aux  05-Conclusion.tex
.jorge/project/report/Configurations/: 00-Fonts.sty  07-Chapters.sty  11-Metadata.sty
.jorge/project/report/Matter/: 00-Cover.aux  00-Cover.tex  01-Front-Page.aux  01-Front-Page.tex  03-Acknowledgements.aux  03-Acknowledgements.tex  05-Acronyms.tex  06-Appendices.tex  07-Annexes.tex  08-Back-Page.tex
.jorge/project/report/Metadata/: Metadata.tex
.jorge/project/sessions/: .current_session  bright-frosty-owl.json  noble-frosty-osprey.json
(+228 files in other folders)
