[project]
name = "first"
version = "0.1.0"
description = "First partial of Intelligent Systems II"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "ipykernel>=6.29.6",
    "seaborn>=0.13.2",
]