[project]
name = "last"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxopt>=1.3.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "qpsolvers>=4.8.1",
    "scikit-learn>=1.7.2",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
    "streamlit>=1.50.0",
    "plotly>=6.3.1",
]
